<resources>
    <string name="loremText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="jpnQuizText">Welcome to the quiz to learn Japanese❗ In each round of the quiz there will be a total of 10 questions. When the quiz is finished you will see your score right over here You can do the test as many times as you want!! 頑張ってください(Ganbattekudasai) = Good luck! 😁 🍣</string>
    <string name="chiQuizText">Welcome to the quiz to learn Chinese❗ In each round of the quiz there will be a total of 10 words. When the quiz is finished you will see your score right over here! You can do the test as many times you want!! 加油 (Jiā yóu) = Good luck! 😁 🍜 </string>
    <string name="korQuizText">Welcome to the quiz to learn Korean❗ In each round of the quiz there will be a total of 10 words. When the quiz is finished you will see your score right over here! You can do the test as many times you want!! 잘보세요 (Jal boseyo) = Good luck! 😁 🍗 </string>


    <string name="app_name">Language app</string>
    <string name="title_activity_sign_in">SignInActivity</string>


    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="learnTabText">LEARN</string>
    <string name="homeTabText">HOME</string>
    <string name="faqTabText">FAQ</string>

    <!--Activity Japanese-->
    <string name="levelTabText">LEVELS</string>
    <!--Activity Chinese-->
    <!--Activity Korean-->


    <!--Quiz activity-->
    <string name="scoreText">Score: 0</string>
    <string name="listenText">LISTEN</string>
    <string name="questionCount">Word 1/x</string>
    <string name="timer">01:00</string>
    <string name="wordTest">The word</string>
    <string name="btnNext">NEXT</string>
    <string name="wordSentence">Sentence</string>
    <string name="wordTranslation">Sentence Translation</string>
    <string name="exitText">Exit</string>
    <string name="speedText">Speed</string>

    <!--RadioButton-->
    <string name="radio1">Option 1</string>
    <string name="radio2">Option 2</string>
    <string name="radio3">Option 3</string>


    <!--Activity Sign in-->
    <string name="signInTitle">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="forgotPasswordText">Forgot password?</string>

    <!--Activity Sign up-->
    <string name="signUpTitle">Sign up</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="alreadyRegistered">Already Registered?</string>

    <!--Activity Main-->
    <string name="mainTitle">Welcome!</string>
    <string name="mainSignIn">Sign in here</string>
    <string name="mainSignUp">Sign up here</string>

    <string name="jpnLangText">LANGUAGE 1</string>
    <string name="chiLangText">LANGUAGE 2</string>
    <string name="korLangText">LANGUAGE 3</string>

    <!--Level 1 Activity-->
    <string name="btnStart">START</string>

    <!--Japan Level Fragment-->
    <string name="jpnQuizTitle">JAPANESE QUIZ</string>
    <string name="lvl1More">READ MORE ABOUT THIS QUIZ</string>
    <string name="quizAbout">About this quiz</string>
    <string name="quizTitle">QUIZ</string>
    <string name="yourScore">Your current score: 0</string>
    <!--China Level Fragment-->
    <string name="chiQuizTitle">CHINESE QUIZ</string>
    <!--Korean Level Fragment-->
    <string name="korQuizTitle">KOREAN QUIZ</string>

    <!--Jpn Level 1-Fragment - Quiz words-->
    <!--Words 1-->
    <string name="jpnWord1">ケーキ</string>
    <string name="jpnWord2">コーヒー</string>
    <string name="jpnWord3">犬</string>
    <string name="jpnWord4">友達</string>
    <string name="jpnWord5">彼氏</string>
    <!--Sentence 1-->
    <string name="jpnWord1Sentence">家族と一緒にでバッターで焼いてできた甘いスイーツを作りました。</string>
    <string name="jpnWord2Sentence">喫茶店で茶色暖かい飲み物を頼みました。</string>
    <string name="jpnWord3Sentence">彼は公園にワンワンって動物と散歩しました。</string>
    <string name="jpnWord4Sentence">仲良くできた知り合いと映画を見に行きました。</string>
    <string name="jpnWord5Sentence">愛している男とデートしに行きました。</string>
    <!--Translated sentence 1-->
    <string name="jpnWord1Tra">Together with my family, we made something sweet that is fried from batter.</string>
    <string name="jpnWord2Tra">At the cafe, I ordered a warm and brown drink.</string>
    <string name="jpnWord3Tra">He took a walk in the park with an animal who says "woof".</string>
    <string name="jpnWord4Tra">Together with a person she got along with, they went to see a movie.</string>
    <string name="jpnWord5Tra">Together with the male love of his/hers life, they went on a date.</string>
    <!--RadioButton 1-->
    <string name="radio1jpn">Dog</string>
    <string name="radio2jpn">Cake</string>
    <string name="radio3jpn">Friend</string>

    <!--Chi Level 1-Fragment - Quiz words-->
    <string name="chiWord1">h</string>
    <string name="chiWord2">d</string>
    <string name="chiWord3">d</string>
    <string name="chiWord4">d</string>
    <string name="chiWord5">d</string>


    <!--fragment home-->
    <string name="nameText">NAME</string>
    <string name="welcome">Welcome</string>
    <string name="JpnQuizAgain">START OVER JPN QUIZ</string>
    <string name="ChiQuizAgain">START OVER CHI QUIZ</string>
    <string name="KorQuizAgain">START OVER KOR QUIZ</string>
    <string name="contentDesImage"> </string>

    <!--fragment learn-->
    <string name="chooseLanguageText">Choose a language to learn :</string>
    <string name="chooseJpnBtnText">JAPANESE</string>
    <string name="chooseChiBtnText">CHINESE</string>
    <string name="chooseKorBtnText">KOREAN</string>

    <string name="chooseBtn">Choose</string>

    <!--fragment faq-->
    <string name="faqTitle">FAQ Page</string>
    <string name="iconTitle">ICONS</string>
    <string name="lvlTitle">LANGUAGE LEVELS</string>
    <string name="memberTitle">MEMBERSHIP</string>
    <string name="read">READ MORE</string>

    <!--Account Bottom-->
    <string name="accountTitle">Home</string>
    <!--Sign out Bottom-->
    <string name="signOutTitle">Sign out Page</string>
    <string name="rlySignOut">Do you really want to sign out ?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>

    <!--Forgot password fragment-->
    <string name="forgotPassPageText">Forgot your password ?</string>
    <string name="recoveryLetterText">Enter email for recovery letter :</string>
    <!--Send recovery letter for password recovery button-->
    <string name="sendLetter">Send</string>
    <!--Go back to Main activity button-->
    <string name="goBack">Back</string>

</resources>