<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizDatabase.QuizActivity">

    <TextView
        android:id="@+id/scoreId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/scoreText"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/wordCountId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/questionCount"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreId"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radioGroupId"
        android:layout_width="243dp"
        android:layout_height="167dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioBtn1"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:text="@string/radio1"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioBtn2"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:text="@string/radio2"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioBtn3"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:text="@string/radio3"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/wordId"
        android:layout_width="233dp"
        android:layout_height="53dp"
        android:text="@string/wordTest"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="182dp"
        android:layout_height="57dp"
        android:drawableRight="@drawable/ic_baseline_forward"
        android:text="@string/btnNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupId"
        app:layout_constraintVertical_bias="0.486" />

    <ImageButton
        android:id="@+id/listenId"
        android:layout_width="48dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/wordId"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367"
        app:srcCompat="@drawable/ic_baseline_quiz_listen" />

    <SeekBar
        android:id="@+id/speedSeekBar"
        android:layout_width="163dp"
        android:layout_height="20dp"
        android:progress="50"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listenId"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/wordSentence"
        android:layout_width="407dp"
        android:layout_height="43dp"
        android:text="@string/wordSentence"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordId"
        app:layout_constraintVertical_bias="0.021" />

    <TextView
        android:id="@+id/translationSentence"
        android:layout_width="405dp"
        android:layout_height="49dp"
        android:text="@string/wordTranslation"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/wordSentence"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/wordSentence"
        app:layout_constraintTop_toBottomOf="@+id/wordSentence"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>