<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/background_purple"
    tools:context=".Home.HomeFragment">


    <TextView
        android:id="@+id/nameUserText"
        android:layout_width="253dp"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:fontFamily="casual"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/nameText"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textWelcome"
        app:layout_constraintStart_toStartOf="@+id/textWelcome"
        app:layout_constraintTop_toBottomOf="@+id/textWelcome"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="327dp"
        android:layout_height="53dp"
        android:fontFamily="@font/diplomata"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <TextView
        android:id="@+id/homeHighscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/yourScore"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/nameUserText"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="@+id/nameUserText"
        app:layout_constraintTop_toBottomOf="@+id/nameUserText"
        app:layout_constraintVertical_bias="0.076" />

    <Button
        android:id="@+id/startJpnQuizAgain"
        android:layout_width="336dp"
        android:layout_height="59dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/input_bg"
        android:fontFamily="casual"
        android:text="@string/JpnQuizAgain"
        android:textColor="@color/jpnColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/homeHighscore"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/homeHighscore"
        app:layout_constraintTop_toBottomOf="@+id/homeHighscore"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/startChiQuizAgain"
        android:layout_width="336dp"
        android:layout_height="59dp"
        android:background="@drawable/input_bg"
        android:fontFamily="casual"
        android:text="@string/ChiQuizAgain"
        android:textColor="@color/chiColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/startJpnQuizAgain"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/startJpnQuizAgain"
        app:layout_constraintTop_toBottomOf="@+id/startJpnQuizAgain"
        app:layout_constraintVertical_bias="0.128" />

    <Button
        android:id="@+id/startKorQuizAgain"
        android:layout_width="336dp"
        android:layout_height="59dp"
        android:background="@drawable/input_bg"
        android:fontFamily="casual"
        android:text="@string/KorQuizAgain"
        android:textColor="@color/korColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/startChiQuizAgain"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/startChiQuizAgain"
        app:layout_constraintTop_toBottomOf="@+id/startChiQuizAgain"
        app:layout_constraintVertical_bias="0.217" />


</androidx.constraintlayout.widget.ConstraintLayout>

