<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_purple">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/diplomata"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409" />

    <TextView
        android:id="@+id/nameUserText"
        android:layout_width="253dp"
        android:layout_height="46dp"
        android:fontFamily="casual"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/nameText"
        android:textColor="@color/design_default_color_primary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/welcomeText"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/welcomeText"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:layout_constraintVertical_bias="0.044" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="408dp"
        android:layout_height="108dp"
        android:background="#E2400368"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:tabIndicatorColor="@color/white"
        app:tabSelectedTextColor="#BFECE2F3"
        app:tabTextColor="#ADC28BD8">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/learnTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_baseline_learn"
            android:soundEffectsEnabled="true"
            android:text="@string/learnTabText" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/homeTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_baseline_home"
            android:soundEffectsEnabled="true"
            android:text="@string/homeTabText" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/faqTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_baseline_check"
            android:soundEffectsEnabled="true"
            android:text="@string/faqTabText" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        app:layout_editor_absoluteX="178dp"
        app:layout_editor_absoluteY="354dp"></androidx.viewpager.widget.ViewPager>

</androidx.constraintlayout.widget.ConstraintLayout>