<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_purple"
    tools:context=".BottomNavigation.SignOutFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/diplomata"
        android:text="@string/signOutTitle"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <TextView
        android:id="@+id/rlySignOutText"
        android:layout_width="319dp"
        android:layout_height="96dp"
        android:fontFamily="casual"
        android:gravity="center_horizontal"
        android:text="@string/rlySignOut"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.159" />

    <TextView
        android:id="@+id/yesClick"
        android:layout_width="109dp"
        android:layout_height="105dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/roundbtn_bg"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/yes"
        android:textColor="#30D502"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/noClick"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toStartOf="@+id/rlySignOutText"
        app:layout_constraintTop_toBottomOf="@+id/rlySignOutText"
        app:layout_constraintVertical_bias="0.266" />

    <TextView
        android:id="@+id/noClick"
        android:layout_width="109dp"
        android:layout_height="105dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/roundbtn_bg"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/no"
        android:textColor="#FF0000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rlySignOutText"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlySignOutText"
        app:layout_constraintVertical_bias="0.813" />
</androidx.constraintlayout.widget.ConstraintLayout>