<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivities.KorQuizActivity">


    <TextView
        android:id="@+id/korAboutId"
        android:layout_width="298dp"
        android:layout_height="83dp"
        android:fontFamily="@font/diplomata"
        android:gravity="center_horizontal"
        android:text="@string/quizAbout"
        android:textColor="@color/korColor"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <TextView
        android:id="@+id/KorQuizContext"
        android:layout_width="369dp"
        android:layout_height="317dp"
        android:fontFamily="casual"
        android:gravity="fill_horizontal"
        android:text="@string/loremText"
        android:textColor="@color/korColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/korAboutId"
        app:layout_constraintVertical_bias="0.217" />

    <Button
        android:id="@+id/korBtnStart"
        android:layout_width="246dp"
        android:layout_height="136dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/input_bg"
        android:text="@string/btnStart"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/KorQuizContext"
        app:layout_constraintStart_toStartOf="@+id/KorQuizContext"
        app:layout_constraintTop_toBottomOf="@+id/KorQuizContext" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/korBottom_nav"
        android:layout_width="412dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/korBtnStart"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_navigation_menu" />

    <TextView
        android:id="@+id/korHighscoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_horizontal"
        android:text="@string/yourScore"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/KorQuizContext"
        app:layout_constraintEnd_toEndOf="@+id/korAboutId"
        app:layout_constraintStart_toStartOf="@+id/korAboutId"
        app:layout_constraintTop_toBottomOf="@+id/korAboutId" />
</androidx.constraintlayout.widget.ConstraintLayout>